Try to figure out why tests now fail...